[VAS-799] feat: Add Retrieve public bundle's subscriptions APIs (#364)
Co-authored-by: giomella <gioele.mella@emeal.nttdata.com>